--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -77,6 +77,9 @@ pre { word-break: normal; }
   font-size: 18px;
   line-height: 30px;
 }
+.small_button {
+  font-size: 13px;
+}
 .clear_floats { clear: both;}
 /* Offerchat box sizing */
 #offerchatbox{ width: 260px !important; }
@@ -180,12 +183,12 @@ code.content { border: none; color: #404040; display: block; padding: 10px; font
   
   .icon {
     text-align: center;
-    font-size: 20px;
+    font-size: 17px;
     padding: 15px 0;
-    img { opacity: 0.75; display: inline;}
+    img { opacity: 0.75; display: inline; height: 25px;}
   }
   .text {
-    font-size: 15px;
+    font-size: 14px;
     padding: 5px 20px 20px;
     
     a { margin: 20px 0 15px 0;}
