--- a/app/views/evaluations/_form.html.haml
+++ b/app/views/evaluations/_form.html.haml
@@ -28,21 +28,21 @@
           %p= @evaluation.errors.full_messages.join(". ")
       = form_for(@evaluation, url: form_url) do |f|
         %div{ style: "text-align: center; margin: 10px auto;" }
-          %div.action_group
+          .action_group
             %h3 What are the job details?
-            %div.tips
+            .tips
               %h5 
                 %img{ alt: "Lightbulb", src: LIGHT_BULB_URL }
                 The company name and the position will be displayed to candidates when they take your Evaluation.
-            %div.control-group
-              %div.controls    
+            .control-group
+              .controls    
                 = f.text_field :company, autofocus: "autofocus", style: "padding: 4px; width: 300px; font-size: 15px; text-align: center;", placeholder: "Company Name"
                 = f.text_field :title, autofocus: "autofocus", style: "padding: 4px; width: 300px; font-size: 15px; text-align: center;", placeholder: "Position"
                 - if false
                   %div{style: "margin-top:10px;"} Upload job description (optional)
-          %div.action_group
+          .action_group
             %h3 Which Challenges would you like to use?
-            %div.tips
+            .tips
               %h5 
                 %img{ alt: "Lightbulb", src: LIGHT_BULB_URL }
                 Choose up to five Challenges total. Each Challenge should take less than 20 minutes to complete.
@@ -76,5 +76,5 @@
         - if @is_trial
           .alert-preview.small-text.orange{ style: "margin: 20px auto -20px auto;"}
             %p{ style: "margin: 0;"} Your trial account limits you to testing #{Group::TRIAL_CANDIDATE_LIMIT} candidates. You've already tested #{@candidate_count}.
-        %div.row{ style: "margin: 40px auto 30px;" }
+        .row{ style: "margin: 40px auto 30px;" }
           = f.submit @evaluation.new_record? ? "Create Evaluation" : "Save Evaluation", class: "submit_button", style: "float: none;"
