--- a/app/views/sections/pre_boss.html.haml
+++ b/app/views/sections/pre_boss.html.haml
@@ -1,14 +1,35 @@
 :css
   body.employer{ background-image: url("https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/gplaypattern.png"); background-repeat: repeat; background-size: auto; }
   .body.container { border: 0px; background-color: transparent; box-shadow: none; }
-  .quizcontainer { width: 692px; }
+  .quizcontainer { width: 750px; }
+  h4 {display: inline-block;}
+  .tt {display: inline-block; text-align: center; margin-left: 3px; }
+  .tt img {width: 16px; height: 16px; display: inline-block; margin-bottom: 6px; }
+  .tt [data-tip]:after { left: -62px; width: 120px; white-space: normal; height: 70px; top:-87px;}
+  .tt [data-tip]:before { left: 3px; } 
+  .submit_button_green { height: 90px; white-space: normal; width:138px; display: inline-block; margin: 10px 22px 0; float: none; vertical-align: top;}
+  .submit_button_standard { float: none; margin-top: 30px; display: inline-block;}
+  
 %div.quizcontainer
-  %div.quizspace
+  %div.quizspace{ style: "padding: 20px;"}
     %div
-      = image_tag GIANT_STONEY, style: "width:117px; height:162px; margin:0; display: inline-block; vertical-align: top;", alt: "Stoney"
-      %div{ style: "display: inline-block; margin-left: 0; font-size:84px; line-height:95px; margin-top:-6px;"}
-        Not bad...
+      = image_tag GIANT_STONEY, style: " height:121px; margin:0; display: inline-block; vertical-align: top;", alt: "Stoney"
+      %div{ style: "display: inline-block; margin-left: 16px; font-size:67px; line-height:90px; margin-top:-6px;"}
+        Nice work!
         %div{ style: "font-size: 27px; margin-left: 0; line-height: 21px; " }
-          But can you handle the <strong>Boss Question</strong>?
-        %div      
-          = link_to "I'm ready!",take_bonus_section_path(@section, params[:task_id], params[:session_id]), class: "submit_button", style: "line-height: 20px; margin-top: 18px;"
+          Get ready for the last question in the section.
+        / %div      
+        /   = link_to "I'm ready!",take_bonus_section_path(@section, params[:task_id], params[:session_id]), class: "submit_button", style: "line-height: 20px; margin-top: 18px;"
+      %div{ style: "margin-top: 20px; "}
+        %h4 
+          Choose which Creative Response you'd like to answer...
+        .tt
+          %div{ "data-tip" => "Creative Responses are free response questions that let you show off your cleverness."}
+            %img{src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/tooltip_light.png"}
+        %div{ style: "margin: 0 auto; width: 100%; text-align: center;"}
+          =link_to truncate("BBlah blah blah this is a Creative Response question and here is some more text ot try and push this guy to its limit", length: 100, separator:' '), "#", class: "submit_button_green small_button"
+          =link_to "Blah blah blah this is a Creative Response question", "#", class: "submit_button_green small_button"
+          =link_to "Blah blah blah this is a Creative Response question", "#", class: "submit_button_green small_button"
+      %div{ style: "text-align: center;"}
+        = link_to "Skip and return to Challenge home", "#", class: "submit_button_standard"
+            
