--- a/app/views/sections/register0.html.haml
+++ b/app/views/sections/register0.html.haml
@@ -6,12 +6,12 @@
   %div.quizspace
     %div
       = image_tag GIANT_STONEY, style: "width:46px; height:55px; margin:0; display: inline-block; vertical-align: top;", alt: "Stoney"
-      %div{ style: "display: inline-block; margin-left: 8px; font-size:28px; line-height:74px; margin-top:-6px;"}
+      %div{ style: "display: inline-block; margin-left: 8px; font-size:22px; line-height:56px; text-transform: uppercase; "}
         You earned <strong>#{@section.points_earned(current_user)} points</strong> in this section!
-      %hr{ style: "margin-top:0; "}
+      %hr{ style: "margin-top:5px; margin-bottom: 10px; "}
       .professional_mb
-        .header
-          %h2 MetaBright is the game that can land you your next job or internship.
+        .header{ style: "padding: 0 15px;" }
+          %h2 Your MetaBright results can land you your next job or internship.
         .body
           %h4 How does it work?
           %p MetaBright can work constantly in the background to anonymously match you with opportunities based on your skills.
@@ -19,13 +19,13 @@
           %p You never know if a better job is just around the corner. MetaBright can keep an eye out for you. Best of all, your status is totally private - your boss will never know!
           %h4 Can I improve my score?
           %p You bet. There are a bunch of ways to earn points, and you can retake questions you might have missed.
-          %h4 What if I just want to play the game?
+          %h4 What if I just want to test myself?
           %p Then you're in good company! Lots of folks use MetaBright just to prove themselves, sharpen their skills, and interact with a community that shares their interests!
           %h4 Can I change my mind?
           %p Yes. It's as simple as changing a setting on your profile.          
         .signup{ style: ""}
           - if current_user.guest_user?
-            = link_to "No thanks, I'll just play MetaBright as a game.", finish_section_path(@section, @session_id, s: 9), style: "margin-right: 40px;", class: "landingbuttontext submit_button_blue_big"
+            = link_to "No thanks, I just want to test myself.", finish_section_path(@section, @session_id, s: 9), style: "margin-right: 40px;", class: "landingbuttontext submit_button_blue_big"
           - else
-            = link_to "No thanks, I'll just play MetaBright as a game.", finish_section_path(@section, @session_id, s: 3), style: "margin-right: 40px;", class: "landingbuttontext submit_button_blue_big"
+            = link_to "No thanks, I just want to test myself.", finish_section_path(@section, @session_id, s: 3), style: "margin-right: 40px;", class: "landingbuttontext submit_button_blue_big"
           = link_to "Try it out!", finish_section_path(@section, @session_id, s: 1), style: "display: inline-block; font-size: 18px; line-height: 36px;", class: "landingbuttontext submit_button_big"
