--- a/app/views/sections/register3.html.haml
+++ b/app/views/sections/register3.html.haml
@@ -20,10 +20,10 @@
           %h5{ style: "font-size: 13px;"} Let your friends know about MetaBright
         %hr{ style: "margin:0; "}
         %div{ style: "padding: 6px 12px; height: 45px; "}
-          %a{ style: "position: relative; top: 9px; float:left; display: inline-block; margin-left: 7px; font-size: 17px;", onclick: sharing_popup_javascript(:facebook, "https://www.metabright.com", "Check out @MetaBright! It's a game that can help get you a job or internship!") }
+          %a{ style: "position: relative; top: 9px; float:left; display: inline-block; margin-left: 7px; font-size: 17px;", onclick: sharing_popup_javascript(:facebook, "https://www.metabright.com", "Check out @MetaBright! It's like a credit report for your skills.") }
             On Facebook
             %img{ style: "height: 30px; width: 30px; margin-left: 12px;", src:"https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/facebook_logo.png"}
-          %a{ style: "float: right; display: inline-block;font-size: 17px;", onclick: sharing_popup_javascript(:twitter, "https://www.metabright.com", "Check out @MetaBright! It's a game that can help get you a job or internship!") } 
+          %a{ style: "float: right; display: inline-block;font-size: 17px;", onclick: sharing_popup_javascript(:twitter, "https://www.metabright.com", "Check out @MetaBright! It's like a credit report for your skills.") } 
             On Twitter
             %img{ style: "height: 48px; ", src:"https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/twitter_logo_blue_on_white.png"}
       %div{ style: "margin: 15px 0 0 0; text-align: center;" }
