--- a/app/views/tasks/_take_text.html.haml
+++ b/app/views/tasks/_take_text.html.haml
@@ -5,7 +5,7 @@
   -if @completed_task.session_id 
     %div.CRquestionspace
       %span{ style: "font-size: 33px;"}
-        Boss Question!
+        Creative Response
     %pre.CRquestion= @task.question
   -else 
     %div.CRquestionspace
