--- a/app/views/newsfeed/_event.html.haml
+++ b/app/views/newsfeed/_event.html.haml
@@ -1,12 +1,12 @@
-%div.post
+.post
   - unless feed.context == :profile or feed.context == :submission
-    %div.postphotospace
+    .postphotospace
       = link_to hovercard_user_path(event.username), class: "hovercard_link", remote: true do
         = image_tag User.picture(event.user_image_url), class: "photo", onerror: "user_img_error(this);"
-  %div.postspace
-    %div.postheader
+  .postspace
+    .postheader
       - if feed.context == :submission
-        %div.postphotospace
+        .postphotospace
           = link_to hovercard_user_path(event.username), class: "hovercard_link", remote: true do
             = image_tag User.picture(event.user_image_url), class: "photo", onerror: "user_img_error(this);"
       %h3
@@ -14,4 +14,8 @@
         - if badge = User.reputation_badge(event.earned_points)
           = image_tag (badge[0]), class: "rep_badge_post", title: badge[1], alt: badge[1]
        
-    %div.posttext.leveltext.dropdown{ style: "background-color: rgb(195, 225, 247)" }= event.content
+    .event-space
+      .image
+        %p #{@posts.image_link}
+        
+      .content
