--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -157,7 +157,7 @@ code.content { border: none; color: #404040; display: block; padding: 10px; font
     display: inline-block;
     text-align: center;
     background-color: rgb(250, 255, 124);
-    margin: 12px;
+    margin: 8px 12px;
     height: 80px;
     width: 80px;
     border-radius: 90px;
@@ -171,7 +171,7 @@ code.content { border: none; color: #404040; display: block; padding: 10px; font
   .content {
     display: inline-block;
     width: 80%;
-    padding: 25px 0 0;
+    padding: 18px 0 0;
     
     p {
       color: #333;
