--- a/app/views/ideas/index.html.haml
+++ b/app/views/ideas/index.html.haml
@@ -1,5 +1,5 @@
 :css
-  .container.body { background-color: rgba(36, 72, 109, 0.8); }
+  .container.body { background-color: #4b6886; padding: 65px 15px 15px 15px;}
   
 %div#ideapage{ style: "margin-top: 4px;" }    
   %div.ideas_header
