--- a/app/views/groups/edit.html.haml
+++ b/app/views/groups/edit.html.haml
@@ -32,7 +32,7 @@
         %h4 Your Group's URL
         .editprofilemanagementarea
           .control-group
-            %label.control-label{ style:"width: auto; "} http://www.metabright.com/g/
+            %label.control-label{ style:"width: auto; "} https://www.metabright.com/g/
             .controls{ style: "margin-left: 245px;" }
               = f.text_field :permalink
               %div{ style: "margin-top: 6px; "}
