--- a/app/views/pages/profile.html.haml
+++ b/app/views/pages/profile.html.haml
@@ -184,7 +184,13 @@
                 What I know...
               .profilecontent
                 %div{ style: "height: 105px; "}
-                  
+                  %p
+                    = link_to "privatize", privatize_enrollment_path(@user.username, enrollment.id)
+                  / %p
+                  /   - unless enrollment.private_at == nil
+                  /     This thing is public
+                  /   - else
+                  /     This thing is private
                   .myrank
                     - if enrollment.metascore == 0
                       %span N/A
