--- a/app/views/pages/profile.html.haml
+++ b/app/views/pages/profile.html.haml
@@ -178,19 +178,22 @@
           - enrollment_details = @enrollment_details[enrollment.path_id]
           .challengecontent{ style: ("display: none;" unless enrollment == @enrollments.first), id: "enrollment_#{enrollment.id}" }
             .arenabucket
-              %h2
+              %h2{ style: "display: block;"}
                 = link_to challenge_path(enrollment.path.permalink) do
                   = image_tag enrollment.path.picture, style: "width: 40px; height: 40px;"
                 What I know...
+                - if @user == current_user
+                  %a{ style: "color: #0088cc;", onclick: "$(this).hide();$('#privatizer').show();" }
+                    = image_tag ICON_GEAR, class: "gear"
+                  %span#privatizer{ style: "display: none;"}
+                    - if enrollment.private_at == nil
+                      = link_to "Mark as Private", privatize_enrollment_path(@user.username, enrollment.id)
+                      .tip-above{ data: {tip: "This is y"}}
+                    - else
+                      = link_to "Mark as Public", privatize_enrollment_path(@user.username, enrollment.id)
+                    
               .profilecontent
                 %div{ style: "height: 105px; "}
-                  %p
-                    = link_to "privatize", privatize_enrollment_path(@user.username, enrollment.id)
-                  / %p
-                  /   - unless enrollment.private_at == nil
-                  /     This thing is public
-                  /   - else
-                  /     This thing is private
                   .myrank
                     - if enrollment.metascore == 0
                       %span N/A
